--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.android.support:recyclerview-v7:26.0.0-beta2'
     implementation 'com.android.support:appcompat-v7:26.0.0-beta2'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
